syntax = "proto3";
option java_multiple_files = true;
package com.krickert.search.model.wiki;
import "google/protobuf/timestamp.proto";

enum ErrorCheckType {
  MD5 = 0;
  SHA1 = 1;
  SHA256 = 2;
}

message ErrorCheck {
  string error_check = 1;
  ErrorCheckType error_check_type = 2;
}

message DownloadFileRequest {
  string url = 1;
  string file_name = 2;
  string file_dump_date = 3;
  ErrorCheck error_check = 4;
}

message DownloadedFile {
  string file_name = 1;
  string full_file_path = 2;
  ErrorCheck error_check = 3;
  string file_dump_date = 4;
  optional string server_name = 5;
}

message WikiSiteInfo {
  string site_name = 1;
  string base = 2;
  string generator = 3;
  string character_case = 4;
}

message Link {
  string url = 1;
  optional string description = 2;
}

message WikiArticle {
  string id = 1;
  string title = 2;
  optional string text = 3;
  optional string wiki_text = 4;
  optional int32 namespace_code = 5;
  optional string namespace = 6;
  optional string dump_timestamp = 7;
  string revision_id = 8;
  WikiSiteInfo site_info = 9;
  repeated Link url_references = 10;
}
